[package]
edition = "2021"
name = "pokemon_trading"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0"
async-trait = "0.1.56"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
envconfig = "0.10.0"
futures = "0.3.21"
log = "0.4"
mockall = "0.11.1"
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.6", features = ["runtime-actix-native-tls", "postgres", "time", "chrono", "offline"]}
